...
                size={wd('100%')}
                containerStyle={styles.illustratinoBg}
                name="illustration-background"
              />
            )}
            <Swiper
              testID="onboarding_swiper"
              loop={false}
              loadMinimal
              loadMinimalSize={0}
              autoplay
              autoplayTimeout={5}
              paginationStyle={styles.dotContainer}
...
                <Reveal duration={1500} from={0} to={1}>
                  <UI.Block style={styles.content}>
                    <UI.Text
                      color={colors.white}
                      h1
                      style={{textAlign: 'center'}}>
                      The easiest way to withdraw cash
                    </UI.Text>

                    <UI.Spacer medium />

                    <UI.Text color={colors.white} style={{textAlign: 'center'}}>
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
...
                <Reveal duration={1500} from={0} to={1}>
                  <UI.Block style={styles.content}>
                    <UI.Text
                      color={colors.white}
                      h1
                      style={{textAlign: 'center'}}>
                      Collect cash from the ease of your mobile phone
                    </UI.Text>

                    <UI.Spacer medium />

                    <UI.Text color={colors.white} style={{textAlign: 'center'}}>
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
...
                  <UI.Block style={styles.content}>
                    <UI.Text
                      testID="onboarding_title"
                      color={colors.white}
                      h1
                      style={{textAlign: 'center'}}>
                      Say goodbye to withdraw frustrations
                    </UI.Text>

                    <UI.Spacer medium />

                    <UI.Text color={colors.white} style={{textAlign: 'center'}}>
                      Make cardless withdrawals from the ease of your mobile
...
                <Reveal duration={1500} from={0} to={1}>
                  <UI.Block style={styles.content}>
                    <UI.Text
                      color={colors.white}
                      h1
                      style={{textAlign: 'center'}}>
                      Gift and receive money from your friends
                    </UI.Text>

                    <UI.Spacer medium />

                    <UI.Text color={colors.white} style={{textAlign: 'center'}}>
                      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
...
              style={{
                paddingHorizontal: wd('4%'),
                position: 'absolute',
                bottom: 0,
              }}>
              <UI.Button
                testID="create_account_button"
                white
                onClick={() => navigation.navigate('Register')}>
                <UI.Text bold>CREATE ACCOUNT</UI.Text>
              </UI.Button>

              <UI.Spacer />

              <UI.Button
                testID="login_button"
                transparent
                onClick={() => navigation.navigate('Login')}>
                <UI.Text color={colors.white} bold>
                  LOGIN
                </UI.Text>
              </UI.Button>
...
